--- a/016.md
+++ b/016.md
@@ -3,7 +3,7 @@
 **开场语：**
 网络四元组是用来唯一标识网络通信中单个连接的一组信息。这组信息包括源IP地址、目标IP地址、源端口号和目标端口号。理解网络四元组对于网络通信的管理、安全性和追踪非常重要。
 
-**网络四元组的解释：**
+**网络四元组：**
 
 1. **源IP地址：** 数据包发送方的IP地址，用于标识数据包的来源位置。
   
@@ -21,7 +21,7 @@
 **Opening:**
 A network four-tuple is a set of information used to uniquely identify an individual connection in network communication. This set of information includes the source IP address, destination IP address, source port number, and destination port number. Understanding the network four-tuple is crucial for managing, securing, and tracking network communications.
 
-**Explanation of Network Four-Tuple:**
+**Network Four-Tuple:**
 
 1. **Source IP Address:** The IP address of the packet sender, used to indicate the origin of the packet.
   
